Issue #14: Re-introduced the font scaling and visibility threshold.

--- a/common/client/src/main/webapp/html/GeneMap/src/less/chromosome.less
+++ b/common/client/src/main/webapp/html/GeneMap/src/less/chromosome.less
@@ -31,3 +31,9 @@
 .chromosome rect.background {
   fill: #fff;
 }
+
+.chromosome-label {
+  font-family: sans-serif;
+  text-anchor: middle;
+  font-weight: bold;
+}
